--- a/index.html
+++ b/index.html
@@ -5,23 +5,20 @@
         <script src = calculator.js></script>
         <title>Calculator</title>
     </head>
-    <body>
-            <div style="text-align: center" ng-controller = "calculatorController as calcCtrl">
-                <h1>Calculator Application</h1>
-                <p ng-if = "calcCtrl.errorMessage != ''" ng-bind = "calcCtrl.errorMessage" style = "color: red; font-weight: bold"></p>
-                <input type = "text" ng-model = "calcCtrl.input1" ng-keypress="calcCtrl.clearErrorMessage()" ></input>
-                <span ng-bind = "calcCtrl.operation" ></span>
-                <input type = "text" ng-model = "calcCtrl.input2" ng-keypress="calcCtrl.clearErrorMessage()" ></input>
-                <button ng-click = "calcCtrl.operate()" >=</button>
-                <span ng-bind = "calcCtrl.result" ></span>
-                <p>
-                    <button ng-if = "calcCtrl.operation != '+'" ng-click = "calcCtrl.chooseOperation('+')">+</button>
-                    <button ng-if = "calcCtrl.operation != '-'" ng-click = "calcCtrl.chooseOperation('-')">-</button>
-                    <button ng-if = "calcCtrl.operation != '*'" ng-click = "calcCtrl.chooseOperation('*')">*</button>
-                    <button ng-if = "calcCtrl.operation != '/'" ng-click = "calcCtrl.chooseOperation('/')">/</button>
-                    <button ng-click="calcCtrl.reset()">Reset</button>
-                </p>
-            </div>
+    <body style="font-family: sans-serif">
+        <div style="text-align: center" ng-controller = "calculatorController as calcCtrl">
+            <h1>Calculator Application</h1>
+            <p ng-show = "calcCtrl.errorMessage != ''" ng-bind = "calcCtrl.errorMessage" style = "color: red; font-weight: bold"></p>
+            <input type = "text" ng-model = "calcCtrl.input1" ng-keypress="calcCtrl.clearErrorMessage()" ></input>
+            <span ng-bind = "calcCtrl.operation" ></span>
+            <input type = "text" ng-model = "calcCtrl.input2" ng-keypress="calcCtrl.clearErrorMessage()" ></input>
+            <button ng-click = "calcCtrl.operate()" >=</button>
+            <span ng-bind = "calcCtrl.result" ></span>
+            <p>
+                <button ng-repeat="operand in calcCtrl.operands" ng-show = "calcCtrl.operation != operand"
+                    ng-click = "calcCtrl.chooseOperation(operand)" >{{operand}}</button>
+                <button ng-click="calcCtrl.reset()">Reset</button>
+            </p>
+        </div>
     </body>
-
 </html>
